force-app/main/default/objects/cuda_signnow__SNInvite__c/cuda_signnow__SNInvite__c.object-meta.xml
<CustomObject>
    <description>A list of documents that have been sent for signing in SignNow.</description>
    <label>SNInvite</label>
    <nameField>
        <label>SNInvite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNInvites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>