force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__document_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__document_id__c</fullName>
    <description>Signnow unique document id</description>
    <label>document_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>