force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__invitee_list__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__invitee_list__c</fullName>
    <description>List of invitees (fulfilled)</description>
    <label>invitee_list</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>