force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__salesforce_uid__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__salesforce_uid__c</fullName>
    <description>Salesforce user id</description>
    <label>salesforce_uid</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>