force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__sf_account_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__sf_account_id__c</fullName>
    <description>Salesforce Account Id</description>
    <label>sf_object_id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>