force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__signnow_document_name__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__signnow_document_name__c</fullName>
    <description>SignNow Document Name</description>
    <label>signnow_document_name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>