force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__signnow_user_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__signnow_user_id__c</fullName>
    <description>SignNow unique user id.</description>
    <label>signnow_user_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>