force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__status__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__status__c</fullName>
    <description>SignNow signing status.</description>
    <label>status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>