force-app/main/default/objects/cuda_signnow__SNInvite__c/fields/cuda_signnow__template_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__template_id__c</fullName>
    <description>Original template document id.</description>
    <label>template_id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>